--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "hacking-exam",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Break those stupit online exams.",
   "main": "index.js",
   "bin": {
-    "hack": "./index.js"
+    "hack": "./bin.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
   "dependencies": {
+    "cfonts": "^2.4.2",
     "cheerio": "^1.0.0-rc.2",
     "reverse-md5": "0.0.4"
   }
